--- a/.github/workflows/Lecture1.yml
+++ b/.github/workflows/Lecture1.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: My assignment
+name: My_assignment
 
 # Controls when the action will run. 
 on:
