--- a/.github/workflows/Lecture1.yml
+++ b/.github/workflows/Lecture1.yml
@@ -30,7 +30,7 @@ jobs:
           node-version: 12 
 
       # Runs a set of commands using the runners shell
-      - name: Insatlling surg
-        run: npm install --global surge
+      - name: Insatlling surge
+        run: npm install -g surge
       - name: Deploying surge
-        run: surge ./http://noiseless-rings.surge.sh/ --token ${{ secrets.MY_SECRET }}
+        run: surge ./http://noiseless-rings.surge.sh/ --token $ {{ secrets.MY_SECRET }}
