--- a/.github/workflows/Lecture1.yml
+++ b/.github/workflows/Lecture1.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Myassignment
+name: Basit
 
 # Controls when the action will run. 
 on:
@@ -18,7 +16,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -27,12 +25,12 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Installing Node Modules
-        uses: action/setup-node@v2-beta
+        uses: actions/setup-node@v2-beta
         with: 
           node-version: 12 
 
       # Runs a set of commands using the runners shell
-      - name: Insatlling surg
-        run: npm install --global surge
+      - name: Insatlling surge
+        run: npm install -g surge
       - name: Deploying surge
-        run: surge ./http://noiseless-rings.surge.sh/ --token ${{ secrets.MY_SECRET }}
+        run: surge ./ noiseless-rings.surge.sh/ -token $ {{secrets.SUGRE_SECRETS}}
