--- a/.github/workflows/Lecture1.yml
+++ b/.github/workflows/Lecture1.yml
@@ -33,5 +33,5 @@ jobs:
       - name: Insatlling surge
         run: npm install -g surge
       - name: Deploying surge
-        run: surge ./ noiseless-rings.surge.sh/ --token $ {{secrets.SUGRE_SECRETS}}
+        run: surge ./ noiseless-rings.surge.sh/ --token "283e083dc2a98c43e8d200a5d74f25af"
 
